--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,22 +112,126 @@
 
 
       </div>
+
+
+      <div class="accordion" id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Inserir novo item
+              </button>
+            </h5>
+          </div>
+
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div class="card-body">
+              <div class="form-group form-check col-sm-12">
+                <input type="checkbox" class="form-check-input" [(ngModel)]="chcFinal">
+                <label class="form-check-label" for="exampleCheck1">Final</label>
+              </div>
+              <div class="col-sm-12" style="padding-top: 20px">
+                <input type="text" class="form-control col-sm-12" [(ngModel)]="txtDado" placeholder="Nome" aria-label="Pokemon">
+              </div>
+
+              <div class="col-sm-12" style="padding-top: 20px">
+                <button type="button" class="btn btn-primary col-sm-12" (click)="addCourse()">
+                  Adicionar
+                </button>
+              </div>
+
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
+                aria-controls="collapseTwo">
+                Inserir Informações (AINDA NAO FUNCIONA)
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div class="card-body">
+
+              <div class="form-group col-sm-12">
+                <label for="exampleFormControlTextarea1">Informação</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" [(ngModel)]="txtInfo"></textarea>
+              </div>
+
+
+              <div class="col-sm-12" style="padding-top: 20px">
+                <button type="button" class="btn btn-primary col-sm-12">
+                  Adicionar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingFour">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
+                aria-controls="collapseFour">
+                Inserir Imagem (AINDA NAO FUNCIONA)
+              </button>
+            </h5>
+          </div>
+          <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+            <div class="card-body">
+              <div class="col-sm-12" style="padding-top: 20px">
+                <input type="text" class="form-control col-sm-12" [(ngModel)]="txtTitulo" placeholder="Titulo">
+              </div>
+              <div class="col-sm-12" style="padding-top: 20px">
+                <input type="text" class="form-control col-sm-12" [(ngModel)]="txtLink" placeholder="Link">
+              </div>
+
+              <div class="col-sm-12" style="padding-top: 20px">
+                <button type="button" class="btn btn-primary col-sm-12" >
+                  Adicionar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
+                aria-controls="collapseThree">
+                Inserir Video (AINDA NAO FUNCIONA)
+              </button>
+            </h5>
+          </div>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div class="card-body">
+              <div class="col-sm-12" style="padding-top: 20px">
+                <input type="text" class="form-control col-sm-12" [(ngModel)]="txtTitulo" placeholder="Titulo">
+              </div>
+              <div class="col-sm-12" style="padding-top: 20px">
+                <input type="text" class="form-control col-sm-12" [(ngModel)]="txtLink" placeholder="Link">
+              </div>
+
+              <div class="col-sm-12" style="padding-top: 20px">
+                <button type="button" class="btn btn-primary col-sm-12" >
+                  Adicionar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
 
-    
 
 
 
 
-    <div class="col-sm-12" style="padding-top: 20px">
-      <input type="text" class="form-control col-sm-12" [(ngModel)]="txtDado" placeholder="Dado" aria-label="Pokemon">
-    </div>
 
-    <div class="col-sm-12" style="padding-top: 20px">
-      <button type="button" class="btn btn-primary col-sm-12" (click)="addCourse()">
-        Adicionar
-      </button>
-    </div>
+
+
 
 
 
