--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,32 @@
   <div class="album py-5 bg-light">
     <div class="container">
 
+
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Deletar Registro?</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <!--
+            <div class="modal-body">
+            </div>
+            -->
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCELAR</button>
+              <button type="button" class="btn btn-primary" (click)="deletarItem()" data-dismiss="modal">SIM</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
       <div class="row">
         <ng-container *ngFor="let item of (items | async)">
           <div class="col-md-4" *ngIf="item.dado" (click)="afundar(item)">
@@ -51,6 +77,10 @@
             <div class="card mb-12 box-shadow">
               <!--<img class="card-img-top" src="{{result.sprites.front_default}}" alt="Card image cap">-->
               <div class="card-body" *ngIf="item.tipo == 'Texto'" style="min-height: 430px;">
+                <button type="button" (click)="selecionar(item)" class="close" aria-label="Close" data-toggle="modal" data-target="#exampleModal" style="padding-bottom: 10px;position: absolute;top: -5px;right: 0px;cursor:pointer;">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+
                 <textarea class="form-control" disabled rows="3" style="height: 358px;">{{item.valor}}</textarea>
               </div>
             </div>
