--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
     <div class="container">
 
 
-      <!-- Modal -->
+      <!-- Modal Deletar info comum-->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -53,6 +53,29 @@
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCELAR</button>
               <button type="button" class="btn btn-primary" (click)="deletarItem()" data-dismiss="modal">SIM</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal Deletar info anexada-->
+      <div class="modal fade" id="deletarInfoAnexadaModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Deletar Registro?</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+
+            <div class="modal-body">
+              O arquivo anexado também será deletado da base de dados!
+            </div>
+
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCELAR</button>
+              <button type="button" class="btn btn-primary" (click)="deletarItemStorage()" data-dismiss="modal">SIM</button>
             </div>
           </div>
         </div>
@@ -77,7 +100,8 @@
             <div class="card mb-12 box-shadow">
               <!--<img class="card-img-top" src="{{result.sprites.front_default}}" alt="Card image cap">-->
               <div class="card-body" *ngIf="item.tipo == 'Texto'" style="min-height: 430px;">
-                <button type="button" (click)="selecionar(item)" class="close" aria-label="Close" data-toggle="modal" data-target="#exampleModal" style="padding-bottom: 10px;position: absolute;top: -5px;right: 0px;cursor:pointer;">
+                <button type="button" (click)="selecionar(item)" class="close" aria-label="Close" data-toggle="modal" data-target="#exampleModal"
+                  style="padding-bottom: 10px;position: absolute;top: -5px;right: 0px;cursor:pointer;">
                   <span aria-hidden="true">&times;</span>
                 </button>
 
@@ -90,6 +114,10 @@
           <div class="col-md-4" *ngIf="item.tipo == 'image/jpeg'">
             <div class="card mb-12 box-shadow">
               <div class="card-body" style="min-height: 430px;">
+                <button type="button" (click)="selecionar(item)" class="close" aria-label="Close" data-toggle="modal" data-target="#deletarInfoAnexadaModal"
+                  style="padding-bottom: 10px;position: absolute;top: -5px;right: 0px;cursor:pointer;">
+                  <span aria-hidden="true">&times;</span>
+                </button>
                 <img class="card-img-top" src="{{item.url}}" alt="{{item.nome}}">
               </div>
             </div>
@@ -98,6 +126,10 @@
           <div class="col-md-4" *ngIf="item.tipo == 'application/pdf'">
             <div class="card mb-12 box-shadow">
               <div class="card-body" style="min-height: 430px;">
+                <button type="button" (click)="selecionar(item)" class="close" aria-label="Close" data-toggle="modal" data-target="#deletarInfoAnexadaModal"
+                  style="padding-bottom: 10px;position: absolute;top: -5px;right: 0px;cursor:pointer;">
+                  <span aria-hidden="true">&times;</span>
+                </button>
                 <a href="{{item.url}}">
                   <h4 class="card-text">{{item.nome}}</h4>
                   <img class="card-img-top" src="assets/documentsCover.png" alt="{{item.nome}}">
@@ -109,7 +141,10 @@
           <div class="col-md-4" *ngIf="item.tipo == 'Video'">
             <div class="card mb-12 box-shadow">
               <div class="card-body" style="min-height: 430px;">
-
+                <button type="button" (click)="selecionar(item)" class="close" aria-label="Close" data-toggle="modal" data-target="#exampleModal"
+                  style="padding-bottom: 10px;position: absolute;top: -5px;right: 0px;cursor:pointer;">
+                  <span aria-hidden="true">&times;</span>
+                </button>
                 <h4 class="card-text">{{item.titulo}}</h4>
                 <div class="embed-responsive embed-responsive-16by9">
                   <iframe class="embed-responsive-item" [src]="item.embed | safe" allowfullscreen></iframe>
