--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,24 @@
         <strong>BUREAU</strong>
       </a>
 
+      
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link pointer">Cadastro de Usuários
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+      </ul>
+      
+
     </div>
+
+
+
+
+
+
+
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" (click)="logout()" href="#">Logout
