--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,43 +1,3 @@
-<header>
-
-  <div class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container d-flex justify-content-between">
-      <a href="#" class="navbar-brand d-flex align-items-center">
-        <strong>BUREAU</strong>
-      </a>
-
-
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link pointer"> Tipo de Usuário: {{auth.busca.type}}
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link pointer">Cadastro de Usuários
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-      </ul>
-
-
-    </div>
-
-
-
-
-
-
-
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" (click)="logout()" href="#">Logout
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-</header>
-
 <main role="main">
 
   <section class="jumbotron text-center">
@@ -188,9 +148,125 @@
       </div>
 
 
+      <!-- INSERCAO DE DADOS -->
 
 
-      <div class="accordion" id="accordion" style="padding-top:150px">
+      <!-- NOVO  -->
+      <div *ngIf="auth.busca && auth.busca.type && (auth.busca.type == 'adm' || auth.busca.type == 'grc')">
+
+
+        <div class="row col-sm-12 form-group" style="padding-top:150px">
+          <div class="col-sm-12 col-md-3 col-lg-3">
+            <button class="btn btn-primary col-sm-12 pointer" data-toggle="collapse" data-target="#multiCollapseExample1, .show" type="button"
+              aria-expanded="false" aria-controls="multiCollapseExample1"> Inserir novo item</button>
+          </div>
+          <div class="col-sm-12 col-md-3 col-lg-3">
+            <button class="btn btn-primary col-sm-12 pointer" data-toggle="collapse" data-target="#multiCollapseExample2, .show" type="button"
+              aria-expanded="false" aria-controls="multiCollapseExample1"> Inserir Informações</button>
+          </div>
+          <div class="col-sm-12 col-md-3 col-lg-3">
+            <button class="btn btn-primary col-sm-12 pointer" data-toggle="collapse" data-target="#multiCollapseExample3, .show" type="button"
+              aria-expanded="false" aria-controls="multiCollapseExample1"> Inserir Arquivos</button>
+          </div>
+          <div class="col-sm-12 col-md-3 col-lg-3">
+            <button class="btn btn-primary col-sm-12 pointer" data-toggle="collapse" data-target="#multiCollapseExample4, .show" type="button"
+              aria-expanded="false" aria-controls="multiCollapseExample1"> Inserir Videos</button>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="collapse multi-collapse" id="multiCollapseExample1" data-parent="#accordion">
+              <div class="card card-body">
+                <!-- <div class="form-group form-check col-sm-12">
+                <input type="checkbox" class="form-check-input" [(ngModel)]="chcFinal">
+                <label class="form-check-label" for="exampleCheck1">Final</label>
+              </div> -->
+                <div class="col-sm-12" style="padding-top: 20px">
+                  <input type="text" class="form-control col-sm-12" [(ngModel)]="txtDado" placeholder="Nome" aria-label="Pokemon">
+                </div>
+
+                <div class="col-sm-12" style="padding-top: 20px">
+                  <button type="button" class="btn btn-primary col-sm-12" (click)="addCourse()">
+                    Adicionar Novo Filho
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <div class="collapse multi-collapse" id="multiCollapseExample2" data-parent="#accordion">
+              <div class="card card-body">
+                <div class="form-group col-sm-12">
+                  <label for="exampleFormControlTextarea1">Informação</label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" [(ngModel)]="txtInfo"></textarea>
+                </div>
+
+
+                <div class="col-sm-12" style="padding-top: 20px">
+                  <button type="button" class="btn btn-primary col-sm-12" (click)="addInfoText()">
+                    Adicionar Informação (TEXTO)
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <div class="collapse multi-collapse" id="multiCollapseExample3" data-parent="#accordion">
+              <div class="card card-body">
+                <div class="form-group col-sm-12">
+                  <input type="file" class="form-control-file" (change)="selectFile($event)">
+                </div>
+
+
+                <div class="progress col-sm-12">
+                  <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" attr.aria-valuenow="{{progress.percentage}}"
+                    aria-valuemin="0" aria-valuemax="100" [ngStyle]="{width:progress.percentage+'%'}">
+                    {{progress.percentage}}%</div>
+                </div>
+
+                <div class="col-sm-12" style="padding-top: 20px">
+                  <button type="button" class="btn btn-primary col-sm-12" (click)="upload()">
+                    Adicionar
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <div class="collapse multi-collapse" id="multiCollapseExample4" data-parent="#accordion">
+              <div class="card card-body">
+                <div class="col-sm-12" style="padding-top: 20px">
+                  <input type="text" class="form-control col-sm-12" [(ngModel)]="txtTitulo" placeholder="Titulo">
+                </div>
+                <div class="col-sm-12" style="padding-top: 20px">
+                  <input type="text" class="form-control col-sm-12" [(ngModel)]="txtLink" placeholder="Link">
+                </div>
+
+                <div class="col-sm-12" style="padding-top: 20px">
+                  <button type="button" class="btn btn-primary col-sm-12" (click)="addInfoVideo()">
+                    Adicionar
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+        </div>
+
+      </div>
+
+      <!-- VELHO -->
+
+      <!-- <div class="accordion" id="accordion" style="padding-top:150px">
         <div class="card">
           <div class="card-header" id="headingOne">
             <h5 class="mb-0">
@@ -301,7 +377,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
     </div>
 
@@ -309,11 +385,3 @@
 
 </main>
 
-<footer class="text-muted">
-  <div class="container">
-    <p class="float-right">
-      <a href="#">Voltar ao topo</a>
-    </p>
-
-  </div>
-</footer>
