--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,23 @@
-<form class="form-signin">
-  <img class="col-md-4 offset-md-4" src="https://myslu.slu.edu/res/images/cas-padlock-icon.png" alt="" width="72" >
-  <h1 class="h3 mb-3 font-weight-normal">Por favor, informe seu e-mail e senha</h1>
-  <label for="inputEmail" class="sr-only">E-mail:</label>
-  <input [(ngModel)]="user.email" name="email" type="email" id="inputEmail" class="form-control" placeholder="E-mail" required autofocus>
-  <label for="inputPassword"  class="sr-only" >Senha:</label>
-  <input type="password" id="inputSenha"[(ngModel)]="user.password" name="password"  class="form-control" placeholder="Senha" required>
+<form name="myform" class="form-signin" [formGroup]="signInForm">
+  <img class="col-md-4 offset-md-4 form-group" src="https://myslu.slu.edu/res/images/cas-padlock-icon.png" alt="" width="150">
+
+  <label for="email" class="sr-only">E-mail:</label>
+  <input formControlName="email" name="email" type="email" id="inputEmail" class="form-control" placeholder="E-mail" required>
+
+  <span style="color: red;" *ngIf="!signInForm.get('email').valid && signInForm.get('email').touched" class="help-block">
+    Por Favor, Digite o EMAIL Corretamente
+  </span>
+
+
+
+  <label for="inputPassword" class="sr-only">Senha:</label>
+  <input type="password" id="inputSenha" formControlName="password" name="password" class="form-control" placeholder="Senha"
+    required>
+
+  <span style="color: red;" *ngIf="!signInForm.get('password').valid && signInForm.get('password').touched" class="help-block">
+    Por Favor, Digite a senha
+  </span>
+
   <!--
   <div class="checkbox mb-3">
     <label>
@@ -13,8 +26,18 @@
   </div>
   -->
   <button class="btn btn-lg btn-primary btn-block" (click)="loginWithEmail()" type="submit">Entrar</button>
-  <!--
-  <button (click)="loginWithGoogle()" class="btn btn-lg btn-primary btn-block" style="background: url(assets/google.png);background-size: cover;height:50px" type="submit"></button>
-  -->
+
+  <button (click)="loginWithGoogle()" class="btn btn-lg btn-primary btn-block" style="background: url(assets/google.png);background-size: cover;height:50px"
+    type="submit"></button>
+
+  <span style="color: red;" *ngIf="error" class="help-block"> {{error}}</span>
+
   <p class="mt-5 mb-3 text-muted">&copy; 2018</p>
+
+
+
+
+
+
+
 </form>
