--- a/src/app/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/cadastro-usuario/cadastro-usuario.component.html
@@ -23,11 +23,18 @@
           <option value="cm">Comum</option>
         </select>
         <span style="color: red;" *ngIf="!cadastroForm.get('tipo').valid && cadastroForm.get('tipo').touched" class="help-block">
-            Por Favor, Selecione um tipo
-          </span>
+          Por Favor, Selecione um tipo
+        </span>
       </div>
-      <button type="submit" (click)="cadastrarUsuario()" class="btn btn-primary">Cadastrar</button>
-      <span style="color: red;" *ngIf="error" class="help-block"> {{error}}</span>
+      <div class="form-group">
+        <span style="color: red;" *ngIf="error" class="help-block"> {{error}}</span>
+      </div>
+
+      <div class="form-group">
+        <button type="submit" (click)="cadastrarUsuario()" class="btn btn-primary">Cadastrar</button>
+        <!-- <span style="color: red;" *ngIf="error" class="help-block"> {{error}}</span> -->
+      </div>
+
     </form>
   </div>
 </div>
